Try autoreconf in head

--- a/head/Dockerfile
+++ b/head/Dockerfile
@@ -3,10 +3,12 @@ FROM debian:buster-slim AS build
 RUN apt-get update && apt-get -y --no-install-recommends install \
       build-essential file texinfo git ca-certificates \
       libffi-dev libgc-dev libgmp-dev libpcre3-dev \
+      autoconf automake libtool m4 \
  && rm -rf /var/lib/apt/lists/*
 WORKDIR /build
 RUN git clone https://github.com/egallesio/STklos.git --depth 1 --tags
 WORKDIR /build/stklos
+RUN autoreconf
 RUN ./configure \
   --without-provided-bignum --without-provided-gc --without-provided-regexp
 RUN make
