--- a/1/Dockerfile
+++ b/1/Dockerfile
@@ -6,13 +6,13 @@ RUN apt-get update && apt-get -y --no-install-recommends install \
  && rm -rf /var/lib/apt/lists/*
 WORKDIR /build
 COPY checksum checksum
-ADD https://www.stklos.net/download/stklos-1.31.tar.gz stklos.tar.gz
+ADD https://www.stklos.net/download/stklos-1.50.tar.gz stklos.tar.gz
 RUN sha256sum stklos.tar.gz && sha256sum -c checksum
 RUN mkdir stklos && tar -C stklos --strip-components 1 -xf stklos.tar.gz
 WORKDIR /build/stklos
 RUN ./configure \
   --without-provided-bignum --without-provided-gc --without-provided-regexp
-RUN TERM=dumb make
+RUN make
 RUN make install
 
 FROM debian:buster-slim
